--- a/kick-off-koa/package.json
+++ b/kick-off-koa/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "co-body": "^4.0.0",
-    "koa": "^1.2.0"
+    "co-views": "^2.1.0",
+    "ejs": "^2.4.1",
+    "koa": "^1.2.0",
+    "koa-session": "^3.3.1"
   }
 }
